2000-02-04  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (klist): Fix to build under Unix again.

2000-02-04  Danilo Almeida  <dalmeida@mit.edu>

	* klist.c: Major revamp to support Kerberos 4 compatibility.  Code
	restructured to allow changes to support Kerberos 4 or Kerberos 5
	only operation depending on whether dynamic libraries are
	avialable.  Explicit documentation and support files to make it
	easy to do this will be forthcoming.

1999-11-02  Ken Raeburn  <raeburn@raeburn.org>

	* klist.c (one_addr): Always use indicated address family and
	length in gethostbyaddr or getipnodebyaddr calls.

1999-12-03  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Windows fix for 10/26/99 cleanup.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-10-17  Ken Raeburn  <raeburn@raeburn.org>

	* klist.c (one_addr): Use getipnodebyaddr and inet_ntop if
	available.  Display ADDRTYPE_INET6 addresses if AF_INET6 is
	defined.

1999-09-01  Danilo Almeida  <dalmeida@mit.edu>

	* klist.c (do_ccache, show_credential): Use krb5_free_unparsed_name
	instead of free.

1999-08-26  Danilo Almeida  <dalmeida@mit.edu>

	* klist.c (show_credential): Index addresses array with i
	in a loop instead of 1.  (Thanks to jaltman@columbia.edu)

1999-08-09  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Use standard windows exe link flags.

Mon May 10 15:13:58 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

Mon Feb  8 22:11:50 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* klist.c: Under Windows, #include winsock.h instead of
		sys/socket.h and netdb.h

	* Makefile.in: Under Windows, link against wsock32.lib to get
	 	gethostbyaddr().

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>
