@@ -1,3 +1,9 @@
+2000-02-16  Danilo Almeida  <dalmeida@mit.edu>
+
+	* klist.c: Fix GET_PROGNAME macro to properly return program name
+	under Win32.  Re-indent, turning spaces that should be tabs into
+	tabs.
+
 2000-02-04  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in (klist): Fix to build under Unix again.
